// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldWithMessage should not render the FormMessage when the disableMessage option is true 1`] = `
<div>
  <div
    class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable"
  >
    <input
      class="rmd-text-field"
      id="field-id"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`TextFieldWithMessage should work with all the defaults when only an id is provided 1`] = `
<div>
  <div
    class="rmd-field-message-container"
  >
    <div
      class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable"
    >
      <input
        aria-describedby="field-id-message"
        class="rmd-text-field"
        id="field-id"
        type="text"
        value=""
      />
    </div>
    <div
      aria-live="polite"
      class="rmd-form-message rmd-form-message--outline"
      id="field-id-message"
    />
  </div>
</div>
`;
